mirrored page h1, main + sidebar widths

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
                 <main id="reflection-main">
                     <article>
+                        <h1>reflection notes</h1>
                         <p>Here I try to describe a simple writing habit that I gradually formed over a couple of years
                             as an exercise in grief. Since then, this practice has become surprisingly clarifying in a
                             variety of other ways as well.</p>
@@ -240,9 +241,11 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                     </article>
                 </main>
 
+
+
                 <main id="script-main">
                     <article>
-
+                        <h1>ink script</h1>
                         <p>I use this custom English script to explore aspects of writing which I find interesting. I
                             try to make it 1] a bit more phonetic than standard English spelling, 2] fun to write in
                             cursive!
@@ -682,7 +685,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                 <nav id="script-nav">
                     <section>
                         <h1>ink script</h1>
-                        <div id="back"><a href="#home">&lt;---- back</a></div>
+                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;----------- back</a></div>
                     </section>
                     <section>
                         <h2><a onclick="scrollToTop()">outline</a></h2>
@@ -699,7 +702,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                 <nav id="reflection-nav">
                     <section>
                         <h1>reflection notes</h1>
-                        <div id="back"><a href="#home">&lt;---------- back</a></div>
+                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;----------- back</a></div>
                     </section>
                     <section>
                         <h2><a onclick="scrollToTop()">outline</a></h2>
