pre.note -> div.note

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                             the screen is an open space.</p>
                         <p>I write in Markdown, meaning that, much as with a pen, I write my own formatting by hand in
                             simple, visually intelligible, intuitive markup.</p>
-                        <pre class="note">
-# 2023-10-27-note-title
-                            
-Here is a thought… an *emphatic* thought.</pre>
+                        <div class="note">
+                            # 2023-10-27-note-title
+
+                            Here is a thought… an *emphatic* thought.</div>
                         <p>More than with any other personal files, it matters to me that my notes and stories be local
                             and in an open format. They sit within
                             a 203 kilobyte folder, an average of 900 bytes per note.</p>
@@ -202,9 +202,10 @@ Here is a thought… an *emphatic* thought.</pre>
                             you need a Markdown editor that understand HTML for links to be interactive. Without such a
                             program, Markdown notes would be closer to paper notes, and links would be like index
                             references that tell you what to manually search for. This is doable as well.</p>
-                        <pre class="note">
-A story note contains wikilinks such as [[this one]]. Links refer to various notes, e.g. [[2021-12-11-holy-holy-holy]].
-</pre>
+                        <div class="note">
+                            A story note contains wikilinks such as [[this one]]. Links refer to various notes, e.g.
+                            [[2021-12-11-holy-holy-holy]].
+                        </div>
                         <p>The result is something which resembles a personal wiki of interconnected notes. However,
                             unlike most wikis, the goal is not to connect information, and certainly not in a
                             hierarchical or topical manner. Instead, the web which appears over time reveals the
