--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                 <nav id="script-nav">
                     <section>
                         <h1>ink script</h1>
-                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;----------- back</a></div>
+                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;------------ back</a></div>
                     </section>
                     <section>
                         <h2><a onclick="scrollToTop()">outline</a></h2>
@@ -701,7 +701,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                 <nav id="reflection-nav">
                     <section>
                         <h1>reflection notes</h1>
-                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;----------- back</a></div>
+                        <div id="back"><a href="#home">&lt;&lt;&lt;&lt;------------ back</a></div>
                     </section>
                     <section>
                         <h2><a onclick="scrollToTop()">outline</a></h2>
