short and really short screens

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                 </header>
 
                 <nav id="home-nav">
-                    <section id="headings">
+                    <section id="social">
                         <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
                                 target="_blank">u/picturamundi</a></p>
                         <p><a class="twitter-link" href="https://twitter.com/picturamundi/with_replies"
