article padding-bottom for scrolling

--- a/index.html
+++ b/index.html
@@ -35,41 +35,40 @@
                 </header>
 
                 <main id="home-main">
-                    <article>
-                        <section class="hobby">
-                            <p><a href="https://picturamundi.github.io/www-operation-manta" target="_blank">play
-                                    opération manta</a></p>
+                    <section class="hobby">
+                        <p><a href="https://picturamundi.github.io/www-operation-manta" target="_blank">play
+                                opération manta</a></p>
+                    </section>
+
+                    <section class="hobby">
+                        <p><a onclick="typingToggle()">typing tools</a></p>
+
+                        <section class="hidden toggle" id="typing-toggle">
+                            <p><a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key
+                                    firmware</a>
+                            </p>
+                            <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">custom
+                                    typing layouts</a></p>
                         </section>
+                    </section>
 
-                        <section class="hobby">
-                            <p><a onclick="typingToggle()">typing tools</a></p>
-
-                            <section class="hidden toggle" id="typing-toggle">
-                                <p><a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key
-                                        firmware</a>
-                                </p>
-                                <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">custom
-                                        typing layouts</a></p>
-                            </section>
-                        </section>
-
-                        <!-- <section class="hobby">
+                    <!-- <section class="hobby">
                             <p><a href="https://github.com/picturamundi/zmk-config" target="_blank">36-key firmware</a>
                             </p>
                             <p><a href="https://github.com/picturamundi/keyboard-layouts" target="_blank">custom
                                     typing layouts</a></p>
                         </section> -->
 
-                        <section class="hobby">
-                            <p><a onclick="writingToggle()">writing habits</p>
-                            <section class="hidden toggle" id="writing-toggle">
-                                <p><a href="#script">ink script</a></p>
+                    <section class="hobby">
+                        <p><a onclick="writingToggle()">writing habits</p>
+                        <section class="hidden toggle" id="writing-toggle">
+                            <p><a href="#script">ink script</a></p>
 
-                                <p><a href="#reflection">reflection notes</a></p>
-                            </section>
+                            <p><a href="#reflection">reflection notes</a></p>
                         </section>
+                    </section>
 
-                        <!-- <section class="hobby">
+                    <!-- <section class="hobby">
                             <p><a onclick="" href="#script">ink script</a></p>
                         </section>
 
@@ -78,12 +77,11 @@
                                     target="_blank">reflection notes</a></p>
                         </section> -->
 
-                        <section class="hobby">
-                            <p><a href="https://facultejeancalvin.academia.edu/MatthiasSzobody"
-                                    target="_blank">theology</a></p>
-                        </section>
+                    <section class="hobby">
+                        <p><a href="https://facultejeancalvin.academia.edu/MatthiasSzobody" target="_blank">theology</a>
+                        </p>
+                    </section>
 
-                    </article>
                 </main>
 
                 <main id="reflection-main">
