--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
                                 target="_blank">picturamundi</a></p>
                     </section>
-                    <p><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
+                    <p id="toggle-wrapper"><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
                 </nav>
 
                 <nav id="script-nav">
@@ -692,7 +692,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <p><a onclick="scrollToHeading('cursive')">cursive</a></p>
                     </section>
                     <section>
-                        <p><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
+                        <p id="toggle-wrapper"><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
                     </section>
                 </nav>
 
@@ -707,7 +707,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <p><a onclick="scrollToHeading('software')">software</a></p>
                     </section>
                     <section>
-                        <p><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
+                        <p id="toggle-wrapper"><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
                     </section>
                 </nav>
 
