--- a/index.html
+++ b/index.html
@@ -673,8 +673,8 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                                 target="_blank">u/picturamundi</a></p>
                         <p><a class="twitter-link" href="https://twitter.com/picturamundi/with_replies"
                                 target="_blank">@picturamundi</a></p>
-                        <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
-                                target="_blank">picturamundi</a></p>
+                        <!-- <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
+                                target="_blank">picturamundi</a></p> -->
                     </section>
                     <p id="toggle-wrapper"><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
                 </nav>
