restore social hovers

--- a/index.html
+++ b/index.html
@@ -669,12 +669,21 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
 
                 <nav id="home-nav">
                     <section id="social">
+                        <!-- <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
+                                target="_blank">picturamundi.com</a></p> -->
                         <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
                                 target="_blank">u/picturamundi</a></p>
                         <p><a class="twitter-link" href="https://twitter.com/picturamundi/with_replies"
                                 target="_blank">@picturamundi</a></p>
+                        <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
+                                target="_blank">picturamundi</a></p>
+
                         <!-- <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
-                                target="_blank">picturamundi</a></p> -->
+                                target="_blank">keebtalk</a></p>
+                        <p><a class="twitter-link" href="https://twitter.com/picturamundi/with_replies"
+                                target="_blank">twitter</a></p>
+                        <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
+                                target="_blank">reddit</a></p> -->
                     </section>
                     <p id="toggle-wrapper"><button id="theme-toggle" onclick="themeToggle()">{theme}</button></p>
                 </nav>
