--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 </main>
 
                 <main id="reflection-main">
+
                     <article>
                         <h1>reflection notes</h1>
                         <p>Here I try to describe a simple writing habit that I gradually formed over a couple of years
@@ -672,11 +673,13 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                         <!-- <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
                                 target="_blank">picturamundi.com</a></p> -->
                         <p><a class="reddit-link" href="https://reddit.com/user/picturamundi/"
-                                target="_blank">u/picturamundi</a></p>
+                                target="_blank">u/picturamundi</a>
+                        </p>
                         <p><a class="twitter-link" href="https://twitter.com/picturamundi/with_replies"
                                 target="_blank">@picturamundi</a></p>
                         <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
-                                target="_blank">picturamundi</a></p>
+                                target="_blank">picturamundi</a>
+                        </p>
 
                         <!-- <p><a class="keebtalk-link" href="https://www.keebtalk.com/u/picturamundi"
                                 target="_blank">keebtalk</a></p>
