--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </main>
 
                 <main id="game-main">
-
+                    <!-- <div id="space" onclick="sendSpaceKey()"></div> -->
                     <div id="messageBox" class="sendmessage">
                         <div class="niokbutton" onclick="okbuttonsend()"></div>
                     </div>
