--- a/run/run.html
+++ b/run/run.html
@@ -33,7 +33,9 @@
                 </template>
             </div>
             <div id="message">
-                <h2>Pigeon Runner</h2>
+                <h2>
+                    <div id="back"><a href="#home">Pigeon Runner</a></div>Pigeon Runner
+                </h2>
                 <p>Tu es un jeune pigeon qui découvre le campus ACEF</p>
                 <p>Prends garrrde à la vaisselle sale... <br> et le fantôme volant de Chester</p>
             </div>
