--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 
 <body id="body" class="dark-theme">
-    <div id="easter-egg"><a href="#game"><img id="avatar" src="assets/images/avatar-animations/avatar.gif" alt=""></a>
+    <div id="easter-egg"><a href="#game" onclick="reloadGame()"><img id="avatar"
+                src="assets/images/avatar-animations/avatar.gif" alt=""></a>
     </div>
 
     <div id="content-wrapper">
