--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </main>
 
                 <main id="game-main">
-                    <div class="desktop">
+                    <div class="desktop" id="game-desktop">
                         <div id="space" onclick="sendSpaceKey()"></div>
                         <div id="messageBox" class="sendmessage">
                             <div class="niokbutton" onclick="okbuttonsend()"></div>
