--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- <meta name="theme-color" content="#191919"> -->
     <meta name="theme-color" content="#ffffff">
 
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.7/dist/handlebars.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.7/dist/handlebars.min.js"></script> -->
 </head>
 
 <body id="body" class="dark-theme">
