--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
-    <!-- <link rel="mask-icon" href="safari-pinned-tab.svg" color="#191919"> -->
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#ffffff">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#191919">
+    <!-- <link rel="mask-icon" href="safari-pinned-tab.svg" color="#ffffff"> -->
     <meta name="msapplication-TileColor" content="#191919">
-    <!-- <meta name="theme-color" content="#191919"> -->
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#191919">
+    <!-- <meta name="theme-color" content="#ffffff"> -->
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.7/dist/handlebars.min.js"></script> -->
 </head>
