--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@ A story note contains wikilinks such as [[this one]]. Links refer to various not
                             unlike most wikis, the goal is not to connect information, and certainly not in a
                             hierarchical or topical manner. Instead, the web which appears over time reveals the
                             topography of the reflective process.</p>
-                        <p><img class="theme-img" src="assets/images/obsidian-graph.png" alt=""></p>
+                        <p><img class="theme-img" src="assets/images/obsidian-graph.jpg" alt=""></p>
                         <p>The above graph is an inadequate representation of reflection, since it doesn&#39;t display
                             the crucial time dimension, among other things. But it gives a dim idea of the
                             sense-making
