add to script charts

--- a/index.html
+++ b/index.html
@@ -377,21 +377,21 @@
                                 <tbody>
                                     <tr>
                                         <td class="tg-0lax">lips</td>
-                                        <td class="tg-0lax">!</td>
-                                        <td class="tg-0lax" rowspan="3">;</td>
-                                        <td class="tg-0lax" rowspan="3">,</td>
-                                        <td class="tg-0lax" rowspan="3">.</td>
-                                        <td class="tg-0lax" rowspan="3">'</td>
-                                        <td class="tg-0lax" rowspan="3">:</td>
-                                        <td class="tg-0lax" rowspan="3">"</td>
+                                        <td class="tg-0lax"><span class="script">!</span></td>
+                                        <td class="tg-0lax" rowspan="3"><span class="script">;</span></td>
+                                        <td class="tg-0lax" rowspan="3"><span class="script">,</span></td>
+                                        <td class="tg-0lax" rowspan="3"><span class="script">.</span></td>
+                                        <td class="tg-0lax" rowspan="3"><span class="script">'</span></td>
+                                        <td class="tg-0lax" rowspan="3"><span class="script">:</span></td>
+                                        <td class="tg-0lax" rowspan="3"><span class="script">"</span></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0lax">ridge</td>
-                                        <td class="tg-0lax">?</td>
+                                        <td class="tg-0lax"><span class="script">?</span></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0lax">back</td>
-                                        <td class="tg-0lax">;</td>
+                                        <td class="tg-0lax"><span class="script">;</span></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -423,100 +423,99 @@
                                     <tr>
                                         <td class="tg-0pky" rowspan="3">lips</td>
                                         <td class="tg-0pky" rowspan="2">bilabial</td>
-                                        <td class="tg-0pky">p</td>
-                                        <td class="tg-0pky">b</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky script"><span class="script">p</span> (p)</td>
+                                        <td class="tg-0pky script"><span class="script">b</span> (b)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky"></td>
-                                        <td class="tg-0pky">m</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky">w</td>
-                                        <td class="tg-0pky">q</td>
-                                        <td class="tg-0pky">W</td>
+                                        <td class="tg-0pky script"><span class="script">m</span> (m)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"><span class="script">w</span> (w)</td>
+                                        <td class="tg-0pky script"><span class="script">q</span> (kw)</td>
+                                        <td class="tg-0pky script"><span class="script">W</span> (gw)</td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky">labiodental</td>
-                                        <td class="tg-0pky">f</td>
-                                        <td class="tg-0pky">v</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky script"><span class="script">f</span> (f)</td>
+                                        <td class="tg-0pky script"><span class="script">v</span> (v)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky" rowspan="4">ridge</td>
                                         <td class="tg-0pky" rowspan="4">alveolar</td>
-                                        <td class="tg-0pky">t</td>
-                                        <td class="tg-0pky">d</td>
-                                        <td class="tg-0pky">F</td>
-                                        <td class="tg-0pky">V</td>
-                                        <td class="tg-0pky">T</td>
-                                        <td class="tg-0pky">D</td>
+                                        <td class="tg-0pky script"><span class="script">t</span> (t)</td>
+                                        <td class="tg-0pky script"><span class="script">d</span> (d)</td>
+                                        <td class="tg-0pky script"><span class="script">F</span> (θ)</td>
+                                        <td class="tg-0pky script"><span class="script">V</span> (đ)</td>
+                                        <td class="tg-0pky script"><span class="script">T</span> (tʃ)</td>
+                                        <td class="tg-0pky script"><span class="script">D</span> (dʒ)</td>
                                     </tr>
                                     <tr>
-                                        <td class="tg-0pky">s</td>
-                                        <td class="tg-0pky">z</td>
-                                        <td class="tg-0pky">j</td>
-                                        <td class="tg-0pky">J</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky">n</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky script"><span class="script">s</span> (s)</td>
+                                        <td class="tg-0pky script"><span class="script">z</span> (z)</td>
+                                        <td class="tg-0pky script"><span class="script">j</span> (ʃ)</td>
+                                        <td class="tg-0pky script"><span class="script">J</span> (ʒ)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky"></td>
-                                        <td class="tg-0pky">l</td>
+                                        <td class="tg-0pky script"><span class="script">n</span> (n)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                    </tr>
+                                    <tr>
                                         <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky script"><span class="script">l</span> (l)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky" rowspan="5">back</td>
                                         <td class="tg-0pky">palatal</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky">r</td>
-                                        <td class="tg-0pky">y</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"><span class="script">r</span> (r)</td>
+                                        <td class="tg-0pky script"><span class="script">y</span> (y)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky" rowspan="2">velar</td>
-                                        <td class="tg-0pky">k</td>
-                                        <td class="tg-0pky">g</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky">x</td>
-                                        <td class="tg-0pky">G</td>
+                                        <td class="tg-0pky script"><span class="script">k</span> (k)</td>
+                                        <td class="tg-0pky script"><span class="script">g</span> (g)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"><span class="script">x</span> (ks)</td>
+                                        <td class="tg-0pky script"><span class="script">G</span> (gz)</td>
                                     </tr>
                                     <tr>
-                                        <td class="tg-0pky">
-                                        </td>
-                                        <td class="tg-0pky">N</td>
                                         <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky script"><span class="script">N</span> (ŋ)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
                                     </tr>
                                     <tr>
                                         <td class="tg-0pky">guttural</td>
-                                        <td class="tg-0pky">h</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky">H</td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
-                                        <td class="tg-0pky"></td>
+                                        <td class="tg-0pky script"><span class="script">h</span> (h)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"><span class="script">H</span> (ʔ)</td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
+                                        <td class="tg-0pky script"></td>
                                     </tr>
                                     <!-- <tr>
                                         <td class="tg-0pky">h</td>
