add to script charts

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                         <p>Vowels are a mess. Come back later!</p>
 
                         <h2 id="cursive">Cursive manuscript</h2>
-                        <div class="large-table cursive">
+                        <!-- <div class="large-table cursive">
                             <table class="tg">
                                 <thead>
                                     <tr>
@@ -588,7 +588,57 @@
                                 </tbody>
                             </table>
 
+                        </div> -->
+                        <div class="large-table cursive">
+                            <table class="tg">
+                                <thead>
+                                    <tr>
+                                        <th class="tg-8jgo" rowspan="2">cursive</th>
+                                        <th class="tg-0lax" rowspan="2">beginning</th>
+                                        <th class="tg-0lax" colspan="3">middle</th>
+                                        <th class="tg-0lax" colspan="3">end</th>
+                                    </tr>
+                                    <tr>
+                                        <th class="tg-0lax">top</th>
+                                        <th class="tg-0lax">middle</th>
+                                        <th class="tg-0lax">bottom</th>
+                                        <th class="tg-0lax">top</th>
+                                        <th class="tg-0lax">middle</th>
+                                        <th class="tg-0lax">bottom</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="tg-0lax">p</td>
+                                        <td class="tg-0lax img" colspan="7" rowspan="8"><img
+                                                src="assets/images/script/cursive.svg"></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">m</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">f</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">t</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">s</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">n</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">l</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tg-0lax">r</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
                         </div>
+
                     </article>
                 </main>
 
